# LemonFish

./: .env.example  .gitignore  CLAUDE.md  Dockerfile.slim  LOCAL_SETUP.md  README.md  docker-compose.published.yml  docker-compose.research.yml  docker-compose.slim.yml  docker-compose.yml  docker-entrypoint.sh  nginx.conf  package.json  setup.sh
backend/: pyproject.toml  run.py
backend/app/: __init__.py  config.py
backend/app/api/: graph.py  report.py  simulation.py
backend/app/models/: __init__.py  project.py  task.py
backend/app/services/: agent_model_assignment.py  budget_tracker.py  document_quality.py  graph_builder.py  oasis_profile_generator.py  ontology_generator.py  personality_frameworks.py  provider_pool.py  report_agent.py  sim_diagnostics.py  simulation_config_generator.py  simulation_ipc.py  simulation_manager.py  simulation_runner.py  text_processor.py  token_estimator.py  zep_entity_reader.py  zep_graph_memory_updater.py  zep_tools.py
backend/app/utils/: __init__.py  capability_detector.py  file_parser.py  llm_client.py  locale.py  logger.py  retry.py  token_tracker.py  zep_paging.py
backend/data/: llm_providers.json
backend/research/: __init__.py  api.py  availability.py  config.py  models.py  orchestrator.py
backend/research/runners/: __init__.py  api_runner.py  base.py  claude_runner.py  codex_runner.py  kimi_runner.py
backend/scripts/: action_logger.py  oasis_model_patch.py  run_parallel_simulation.py  run_reddit_simulation.py  run_twitter_simulation.py  test_profile_format.py  token_instrumentation.py
cli/: README.md  package.json
(+56 files in other folders)
